--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <head>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/k33g/gh3/master/gh3.js"></script>
+<script type="text/javascript" src="gh3.js"></script>
 
 </head>
 <body>
