--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 <ul></ul>
 <textarea></textarea>
 
-<script type="text/javascript>
+<script type="text/javascript">
 
   var user = new Gh3.User("jakemac53");
   var repoTitle = $("h1");
