--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+<script src="jquery.js"></script>
+<script src="underscore.js"></script>
 <script type="text/javascript" src="gh3.js"></script>
 
 </head>
