--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,7 @@
   var branchContents = $("ul");
   var rawContent = $("textarea");
   
-  var repos = new Gh3.Repositories(repoTitle);
+  var repos = new Gh3.Repositories(user);
 
   repos.fetch({page:1, per_page:10, direction : "desc"},"next", function (err, res) {
     if(err) {
