--- a/test/index.html
+++ b/test/index.html
@@ -23,13 +23,10 @@
   var repos = new Gh3.Repositories(user);
 
   repos.fetch(
+    {}, null,
     function (res) {
       console.log("Repositories", res);
-    },
-    function (err) {
-      throw "outch ..." + err;
-    },
-    {});
+    });
   var repo = new Gh3.Repository("jakemac53.github.io", user);
 
   repo.fetch(function (err, res) {
