--- a/draft/players_page.html
+++ b/draft/players_page.html
@@ -6,11 +6,13 @@
     <style>
       core-list-dart h3 {
         padding: 10px 0;
-        font-size: 18px;
-        height: 19px;
+        font-size: 16px;
+        height: 21px;
         margin: 0px;
         cursor: pointer;
         border-bottom: solid 1px black;
+        overflow: hidden;
+        white-space: nowrap;
       }
       core-list-dart h3[drafted] {
         background-color: red;
