--- a/polymer-perf-elements/create_custom_dart_element.html
+++ b/polymer-perf-elements/create_custom_dart_element.html
@@ -312,7 +312,7 @@ html /deep/ [segment], html /deep/ segment {
       }
     </style>
     <content></content>
-    <button id="button" on-click="{{test}}">test</button>
+    <button id="button" on-click="{{testAction}}" disabled="">test</button>
     <div id="status"></div>
     <div id="drawing"></div>
     <div id="container"></div>
@@ -321,7 +321,7 @@ html /deep/ [segment], html /deep/ segment {
 </polymer-element>
 </div>
 
-  <h2>Custom element creation, 1000 elements</h2>
+  <h2>Custom Dart element creation, 1000 elements</h2>
   <measure-create id="create" numtocreate="1000" tagname="x-a">
   </measure-create>
 
