--- a/polymer-perf-elements/create_div.html
+++ b/polymer-perf-elements/create_div.html
@@ -312,7 +312,7 @@ html /deep/ [segment], html /deep/ segment {
       }
     </style>
     <content></content>
-    <button id="button" on-click="{{test}}">test</button>
+    <button id="button" on-click="{{testAction}}" disabled="">test</button>
     <div id="status"></div>
     <div id="drawing"></div>
     <div id="container"></div>
