--- a/polymer-perf-elements/packages/polymer_perf_elements/measure_create.html
+++ b/polymer-perf-elements/packages/polymer_perf_elements/measure_create.html
@@ -17,7 +17,7 @@
       }
     </style>
     <content></content>
-    <button id="button" on-click='{{test}}'>test</button>
+    <button id="button" on-click='{{testAction}}' disabled>test</button>
     <div id="status"></div>
     <div id="drawing"></div>
     <div id="container"></div>
