--- a/polymer-perf-elements/create_polymer_dart.html
+++ b/polymer-perf-elements/create_polymer_dart.html
@@ -312,7 +312,7 @@ html /deep/ [segment], html /deep/ segment {
       }
     </style>
     <content></content>
-    <button id="button" on-click="{{test}}">test</button>
+    <button id="button" on-click="{{testAction}}" disabled="">test</button>
     <div id="status"></div>
     <div id="drawing"></div>
     <div id="container"></div>
@@ -323,7 +323,7 @@ html /deep/ [segment], html /deep/ segment {
 
   <polymer-element name="x-a">
   </polymer-element>
-  <h2>Custom element creation, 1000 elements</h2>
+  <h2>Polymer Dart element creation, 1000 elements</h2>
   <measure-create id="create" numtocreate="1000" tagname="x-a">
   </measure-create>
 
